--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://admin:B1pkAHVrtQin5seF@pulkit.pmrvg.mongodb.net/RestInnProperties?retryWrites=true&w=majority
 spring.main.allow-circular-references: true
+server.port= 8085
